--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 Thumbs.db
 desktop.ini
 
-# Some image files for development
-*.webp
+# Images
+img/*
+!img/forgesmith_logo_white_small_v2.gif
 
 # 3D Printing Files
 *.gcode
