--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ Thumbs.db
 desktop.ini
 
 # Images
-img/*
 !img/smithforge_logo_white_small_v2.gif
-!img/process.png
+!img/process2.png
+img/*
 
 # 3D Printing Files
 *.gcode
